# linux_unix_programming_manual

./: CMakeLists.txt  Makefile  README.md  main.c
lib/: 3-6-2_system_data_type.h  copy.c  currency_IO_4-1.c  ename.c.inc  error_functions.c  error_functions.h  get_num.c  get_num.h  tlpi_hdr.h
